cicd/manifests/apps/capacitor/istio.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway-capacitor
  namespace: flux-system
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - flux.srv-lab.server.home
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: flux-tls-secret
      hosts:
        - flux.srv-lab.server.home
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice-capacitor
  namespace: flux-system
spec:
  hosts:
    - flux.srv-lab.server.home
  gateways:
    - gateway-capacitor
  http:
    - match:
        - uri:
            prefix: /
          headers:
            Authorization:
              exact: "Basic YWRtaW46MTIzNDU2"
      route:
        - destination:
            host: capacitor.flux-system.svc.cluster.local
            port:
              number: 9000
    - match:
        - uri:
            prefix: /
      directResponse:
        status: 401
        body:
          string: "Access denied"
      headers:
        response:
          set:
            WWW-Authenticate: 'Basic realm="Authentication required"'
